# internal/routes/user_routes.go
@@ -3,17 +3,16 @@ package routes
 import (
 	"novaardiansyah/simple-pos/internal/controllers"
 	"novaardiansyah/simple-pos/internal/middleware"
-	"novaardiansyah/simple-pos/internal/repositories"
 
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 )
 
 func UserRoutes(api fiber.Router, db *gorm.DB) {
-	userRepo := repositories.NewUserRepository(db)
-	userController := controllers.NewUserController(userRepo)
+	userController := controllers.NewUserController(db)
 
 	users := api.Group("/users", middleware.Auth(db))
 	users.Get("/", userController.Index)
+	users.Get("/me", userController.Me)
 	users.Get("/:id", userController.Show)
 }
